-MediaService Session Impl (#11)